--- a/app/assets/javascripts/discourse/app/templates/confirm-2fa.hbs
+++ b/app/assets/javascripts/discourse/app/templates/confirm-2fa.hbs
@@ -1,1 +1,27 @@
-<h1>{{model.backup_enabled}}</h1>
+{{#if securityKeyOrSecondFactorRequired}}
+  {{#if errorMessage}}
+    <div class="alert alert-error">{{errorMessage}}</div>
+    <br>
+  {{/if}}
+  {{#if securityKeyRequired}}
+    {{#security-key-form
+      allowedCredentialIds=model.allowed_credential_ids
+      challenge=model.security_key_challenge
+      showSecurityKey=model.security_key_required
+      showSecondFactor=false
+      secondFactorMethod=secondFactorMethod
+      otherMethodAllowed=otherMethodAllowed
+      action=(action "authenticateSecurityKey")}}
+    {{/security-key-form}}
+  {{else}}
+    {{#second-factor-form
+      secondFactorMethod=secondFactorMethod
+      secondFactorToken=secondFactorToken
+      backupEnabled=backupEnabled
+      isLogin=false}}
+      {{second-factor-input value=secondFactorToken inputId="second-factor" secondFactorMethod=secondFactorMethod backupEnabled=backupEnabled}}
+    {{/second-factor-form}}
+  {{/if}}
+  {{#unless securityKeyRequired }}
+    {{d-button action=(action "submit") class="btn-primary" label="submit" type="submit"}}
+  {{/unless}}
