--- a/app/assets/javascripts/discourse/app/templates/components/second-factor-input.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/second-factor-input.hbs
@@ -7,4 +7,5 @@
     autocorrect="off"
     autocapitalize="off"
     autofocus="autofocus"
+    onChange=(action onTokenInput)
     placeholder=placeholder}}
