--- a/app/assets/javascripts/discourse/app/templates/confirm-2fa.hbs
+++ b/app/assets/javascripts/discourse/app/templates/confirm-2fa.hbs
@@ -15,60 +15,22 @@
     {{second-factor-input
       value=secondFactorToken
       secondFactorMethod=shownSecondFactorMethod
+      onTokenInput=(action "onTokenInput")
     }}
   </div>
 {{/if}}
 
-{{#if hasAlternatives}}
-  <p><span>
-    {{#if isTotpAnAlternative}}
-      <a href="" class="toggle-second-factor-method" {{action "useAnotherMethod" TOTP}}>
-        {{i18n "login.security_key_alternative"}}
-      </a>
-    {{/if}}
-
-    {{#if isSecurityKeyAnAlternative}}
-      <a href="" class="toggle-second-factor-method" {{action "useAnotherMethod" SECURITY_KEY}}>
-        {{i18n "login.security_key_alternative"}}
-      </a>
-    {{/if}}
-
-    {{#if isBackupCodesAnAlternative}}
-      <a href="" class="toggle-second-factor-method" {{action "useAnotherMethod" BACKUP_CODE}}>
-        {{i18n "login.security_key_alternative"}}
-      </a>
-    {{/if}}
-  </span></p>
-{{/if}}
-
-{{!--
-{{#if showToggleMethodLink}}
+{{#if alternativeMethods.length}}
   <p>
-    <a href="" class="toggle-second-factor-method" {{action "toggleSecondFactorMethod"}}>{{ i18n linkText }}</a>
+  {{#each alternativeMethods as |method index|}}
+      {{#unless (eq index 0)}}
+        <span>&middot;</span>
+      {{/unless}}
+      <span>
+        <a href="" class="toggle-second-factor-method" {{action "useAnotherMethod" method.id}}>
+          {{i18n method.translationKey}}
+        </a>
+      </span>
+    {{/each}}
   </p>
 {{/if}}
-
-
-{{#if securityKeyRequired}}
-  {{#security-key-form
-    allowedCredentialIds=model.allowed_credential_ids
-    challenge=model.security_key_challenge
-    showSecurityKey=model.security_key_required
-    showSecondFactor=false
-    secondFactorMethod=secondFactorMethod
-    otherMethodAllowed=otherMethodAllowed
-    action=(action "authenticateSecurityKey")}}
-  {{/security-key-form}}
-{{else}}
-  {{#second-factor-form
-    secondFactorMethod=secondFactorMethod
-    secondFactorToken=secondFactorToken
-    backupEnabled=backupEnabled
-    isLogin=false}}
-    {{second-factor-input value=secondFactorToken inputId="second-factor" secondFactorMethod=secondFactorMethod backupEnabled=backupEnabled}}
-  {{/second-factor-form}}
-{{/if}}
-{{#unless securityKeyRequired}}
-  {{d-button action=(action "submit") class="btn-primary" label="submit" type="submit"}}
-{{/unless}}
---}}
